--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-1200.less
@@ -1,4 +1,4 @@
-@media only screen and (max-width : 1200px) {
+@media only screen and (max-width : 1199px) {
 
 /*HEADER
 ***********************************************/
@@ -11,7 +11,9 @@
 			}
 		}
 		img.eu-logo{
-			width: 75px;
+			width: 65px;
+			margin-left: 15px;
+			margin-top: 36px;
 		}
 	}
 	
