--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -913,6 +913,7 @@
 @color-text-purple: #967ea7; //ya veremos si se cambia por el oscuro
 @color-text-purple-darker: #786586;
 @color-text-white: @color-white;
+@color-text-hover-blue: #23527c;
 @color-red: #343434;
 @color-background-light-purple: #dfd8e4;
 
