--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -8377,25 +8377,25 @@ a.more-link:before {
   line-height: 16px;
   font-weight: bold;
 }
-#mini-panel-partner_in_country .panels-flexible-row-inside-first {
-  background-color: #ffffff;
+div[id^="mini-panel-partner_in_country"] .panels-flexible-row-inside-first {
+  background-color: #ffffff !important;
   border-bottom: 2px solid #786586;
   padding-top: 10px;
   margin-bottom: 10px;
   padding-bottom: 30px;
 }
-#mini-panel-partner_in_country .panels-flexible-row-inside-first h2 {
+div[id^="mini-panel-partner_in_country"] .panels-flexible-row-inside-first h2 {
   margin-top: 0px;
 }
-#mini-panel-partner_in_country .partner-contact-container .pane-title,
-#mini-panel-partner_in_country .partner-social-container .pane-title,
-#mini-panel-partner_in_country .partner-colaborators-container .pane-title,
-#mini-panel-partner_in_country .partner-text2-container .pane-title {
+div[id^="mini-panel-partner_in_country"] .partner-contact-container .pane-title,
+div[id^="mini-panel-partner_in_country"] .partner-social-container .pane-title,
+div[id^="mini-panel-partner_in_country"] .partner-colaborators-container .pane-title,
+div[id^="mini-panel-partner_in_country"] .partner-text2-container .pane-title {
   color: #967ea7;
   font-weight: bold;
   margin-bottom: 15px;
 }
-#mini-panel-partner_in_country .partner-contact-container .field-name-field-country {
+div[id^="mini-panel-partner_in_country"] .partner-contact-container .field-name-field-country {
   background-color: #ffffff;
   display: block;
   color: #58585a;
@@ -8407,12 +8407,40 @@ a.more-link:before {
   margin-right: 0px;
   margin-bottom: 15px;
 }
-#mini-panel-partner_in_country .partner-colaborators-container .field-name-field-collaborator > div.field-items > div.field-item {
+div[id^="mini-panel-partner_in_country"] .partner-colaborators-container .field-name-field-collaborator > div.field-items > div.field-item {
   display: inline-block;
   margin-right: 15px;
 }
-#mini-panel-partner_in_country .partner-text2-container .field-type-taxonomy-term-reference a {
+div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-taxonomy-term-reference a {
   color: #ffffff;
+}
+.partners-no-2 .country-partner-wrapper:last-child {
+  border-left: 2px solid #786586;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] {
+  margin: 0px 30px;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-inside-first {
+  padding-top: 0px;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-inside-first .partner-image-container {
+  width: 100%;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-inside-first .partner-image-container img {
+  margin: 0 auto;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-inside-first .partner-text-container {
+  width: 100%;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-inside-first .partner-text-container h2 {
+  text-align: center;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-new-1-inside > div {
+  width: 50%;
+}
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-new-1-inside .partner-contact-container,
+.partners-no-2 .country-partner-wrapper div[id^="mini-panel-partner_in_country"] .panels-flexible-row-new-1-inside .partner-social-container {
+  min-height: 285px;
 }
 #quicktabs-container-view__country_partner_content__block,
 #quicktabs-container-view__country_partner_content__block_1 {
@@ -8540,6 +8568,7 @@ a.more-link:before {
 #quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .odd:first-child,
 #quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .odd:first-child {
   display: table-cell;
+  width: 50%;
 }
 #quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child .node-partner,
 #quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child .node-partner {
@@ -8903,30 +8932,46 @@ a.more-link:before {
 /*END Promotional materials*/
 /*NATIONAL SOCIAL PARTNERS
 *************************************************************/
-.page-sectorial-social-partners h1 {
+.page-sectorial-social-partners h1,
+.page-national-partners h1,
+.page-irat-network h1 {
   color: #58585a;
 }
-.page-sectorial-social-partners .pane-node-body {
+.page-sectorial-social-partners .pane-node-body,
+.page-national-partners .pane-node-body,
+.page-irat-network .pane-node-body {
   font-weight: bold;
 }
-.page-sectorial-social-partners .quicktabs-tabs {
+.page-sectorial-social-partners .quicktabs-tabs,
+.page-national-partners .quicktabs-tabs,
+.page-irat-network .quicktabs-tabs {
   background-color: #786586;
 }
-.page-sectorial-social-partners .quicktabs-tabs li {
+.page-sectorial-social-partners .quicktabs-tabs li,
+.page-national-partners .quicktabs-tabs li,
+.page-irat-network .quicktabs-tabs li {
   display: table-cell;
 }
-.page-sectorial-social-partners .quicktabs-tabs li a {
+.page-sectorial-social-partners .quicktabs-tabs li a,
+.page-national-partners .quicktabs-tabs li a,
+.page-irat-network .quicktabs-tabs li a {
   color: #ffffff;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .hwc-alphabet-container {
+.page-sectorial-social-partners .quicktabs-tabpage .hwc-alphabet-container,
+.page-national-partners .quicktabs-tabpage .hwc-alphabet-container,
+.page-irat-network .quicktabs-tabpage .hwc-alphabet-container {
   margin-right: 15px;
   margin-left: 15px;
   text-transform: uppercase;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .hwc-alphabet-container .hwc-char-link {
+.page-sectorial-social-partners .quicktabs-tabpage .hwc-alphabet-container .hwc-char-link,
+.page-national-partners .quicktabs-tabpage .hwc-alphabet-container .hwc-char-link,
+.page-irat-network .quicktabs-tabpage .hwc-alphabet-container .hwc-char-link {
   margin: 0px 10px;
 }
-.page-sectorial-social-partners .quicktabs-tabpage div[id^="hwc-char-"] {
+.page-sectorial-social-partners .quicktabs-tabpage div[id^="hwc-char-"],
+.page-national-partners .quicktabs-tabpage div[id^="hwc-char-"],
+.page-irat-network .quicktabs-tabpage div[id^="hwc-char-"] {
   color: #786586;
   font-family: "Oswald";
   font-size: 2.2em;
@@ -8935,54 +8980,94 @@ a.more-link:before {
   margin: 30px 0px 0px 0px;
   padding: 15px 30px 0px 30px;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group {
   background-color: #dfd8e4;
   padding: 0px 30px;
   margin: 0px 0px;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing {
   border-top: 2px solid #786586;
   padding: 30px 15px;
   padding-left: 0px;
   overflow: hidden;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .col-sm-2,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .col-sm-2,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .col-sm-2 {
   padding-left: 0px;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .field-name-field-country {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .field-name-field-country,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .field-name-field-country,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .field-name-field-country {
   background-color: inherit;
   margin: 0px;
   padding: 0px;
   font-style: normal !important;
   font-size: 1em;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 {
   margin-top: 10px;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 a {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 a,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 a,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .hwc-alpha-pager-view-title-field h3 a {
   color: #58585a;
   font-weight: bold;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label {
   display: table-cell;
   text-align: center;
   width: 25%;
   margin-top: 25px;
   border-left: 2px solid #786586;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label label {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label label,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label label,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label label {
   display: block;
   color: #786586;
   min-height: 40px;
   line-height: 16px;
   font-weight: normal;
 }
-.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label span {
+.page-sectorial-social-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label span,
+.page-national-partners .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label span,
+.page-irat-network .quicktabs-tabpage .quicktabs-views-group .views-field.views-field-nothing .partner-content-label span {
   display: block;
   color: #786586;
   font-size: 2.2em;
   line-height: 16px;
   font-weight: bold;
+}
+.page-irat-network .view-id-partners_list article {
+  background-color: #dfd8e4;
+  margin-bottom: 30px;
+  padding: 30px 15px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+.page-irat-network .view-id-partners_list article .col-sm-10 {
+  color: #786586;
+  font-weight: bold;
+}
+.page-irat-network .view-id-partners_list article .col-sm-10 h3 {
+  margin-top: 10px;
+}
+.page-irat-network .view-id-partners_list article .col-sm-10 h3 a {
+  color: #58585a;
+  font-weight: bold;
+}
+.page-irat-network .view-id-partners_list article .col-sm-10 h3 a:hover {
+  text-decoration: underline !important;
+  color: #23527c;
 }
 /*END National social partners*/
 /*SITE MAP
