--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -173,6 +173,7 @@
 					background-color: @color-menu-icons;
     				padding: 3px 12px 3px 12px;
 					color: @color-white;
+					text-decoration: none;
 					&:before{
 						content: "\e033";
 					    margin-right: 8px;
@@ -201,6 +202,24 @@
 		}
 	}
 }
+//if login-in
+// .logged-in{
+// 	#block-menu-block-3{
+// 		.introduction-title{				
+// 			a{
+// 				&:before{
+// 					content: "\e033" !important;
+// 				    margin-right: 8px;
+// 				    display: inline-block;
+// 				    font-family: 'Glyphicons Halflings';
+// 				    font-size: 0.9em;
+// 				    top: 1px;
+// 				    position: relative;
+// 				}
+// 			}
+// 		}
+// 	}
+// }
 
 
 /*Menu
@@ -243,6 +262,7 @@
 					padding: 0px;
 					padding-left: 0px;
 					padding-right: 0px;
+					text-decoration: none !important;
     				//margin-right: 10px;
 				}
 				span{
