--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -27,8 +27,11 @@ input, select{
 }
 
 a{
-	text-decoration: none !important;
+	text-decoration: none;
 	color: @color-text-purple-darker;
+	&:hover{
+		text-decoration: underline;
+	}
 }
 
 h1{
@@ -1680,7 +1683,7 @@ a.more-link{
 		}
 	}
 	.field-name-body{
-		margin-bottom: 30px;
+		margin-bottom: 0px;
 		a{
 			color: @color-text-purple-darker;
 			font-style: italic;
@@ -1968,6 +1971,21 @@ div[id ^= "mini-panel-partner_in_country"]{
     		    height: 45px;
     		}
 		}
+		.group-news{
+			&:after{
+    		    .section-icons("../images/icons/005.png");
+    		}
+		}
+		.node-news{
+			.field-name-field-publication-date{
+				margin-top: 0px;
+			}
+			h3{
+				a{
+					color: @color-text-grey;
+				}
+			}
+		}
 		.content-group-label{
 			color: #967ea7;
 		    border-bottom: 2px solid #967ea7;
@@ -2074,7 +2092,7 @@ div[id ^= "mini-panel-partner_in_country"]{
 			}
 		}
 		.quicktabs-views-group:last-child {
-			border-bottom: 0px solid @color-text-purple-darker;
+			border-bottom: 2px solid @color-text-purple;
 		}
 		
 		.node-practical-tool{
@@ -2104,6 +2122,18 @@ div[id ^= "mini-panel-partner_in_country"]{
 			&:before{
 				content: "";
 				background: url("../images/icons/017.png") no-repeat;
+				background-size: 100%;
+			    display: inline-block;
+			    width: 22px;
+			    height: 21px;
+			    vertical-align: middle;
+			    margin-right: 10px;
+			}
+		}
+		.tab-title-news{
+			&:before{
+				content: "";
+				background: url("../images/icons/004.png") no-repeat;
 				background-size: 100%;
 			    display: inline-block;
 			    width: 22px;
