--- a/docroot/sites/all/themes/oira_frontend/less/footer.less
+++ b/docroot/sites/all/themes/oira_frontend/less/footer.less
@@ -20,6 +20,9 @@
 				padding-right: 10px;
 				border-left: 2px solid;
 				border-radius: 0px;
+				&:hover{
+					text-decoration: underline;
+				}
 			}
 		}
 		.first{
