--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -105,18 +105,29 @@
 		}
 		#block-menu-block-5{
 			width: 95px;
-		    display: inline-block;
 		    position: absolute;
 		    top: 41px;
 		    z-index: 3;
 			.introduction-image{
 				display: inline-block;
-				img{
-					width: 29px;
+				float: left;
+				a{
+					display: inline-block;
+					width: 36px;
+					height: 29px;
+					background: url('../images/icons/icon-news-menu.png') no-repeat;
+					background-size: 39px;
+					margin-top: -1px;
+					margin-left: -5px;
+					img{
+						display: none;
+						width: 29px;
+					}
 				}
 			}
 			.introduction-title{
 				display: inline-block;
+				margin-top: 4px;
 				a{
 					color: @color-menu-icons;
 					margin-left: 5px;
