--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6607,19 +6607,30 @@ button.close {
 }
 .top-header .header-blocks #block-menu-block-5 {
   width: 95px;
-  display: inline-block;
   position: absolute;
   top: 41px;
   z-index: 3;
 }
 .top-header .header-blocks #block-menu-block-5 .introduction-image {
   display: inline-block;
+  float: left;
 }
-.top-header .header-blocks #block-menu-block-5 .introduction-image img {
+.top-header .header-blocks #block-menu-block-5 .introduction-image a {
+  display: inline-block;
+  width: 36px;
+  height: 29px;
+  background: url('../images/icons/icon-news-menu.png') no-repeat;
+  background-size: 39px;
+  margin-top: -1px;
+  margin-left: -5px;
+}
+.top-header .header-blocks #block-menu-block-5 .introduction-image a img {
+  display: none;
   width: 29px;
 }
 .top-header .header-blocks #block-menu-block-5 .introduction-title {
   display: inline-block;
+  margin-top: 4px;
 }
 .top-header .header-blocks #block-menu-block-5 .introduction-title a {
   color: #003399;
@@ -8199,13 +8210,19 @@ a.more-link:before {
 .view-display-id-oshnews_list article .field-name-body a {
   color: #786586;
   font-style: italic;
+  text-decoration: underline !important;
 }
 .view-display-id-oshnews_list article .field-name-body a:hover {
-  text-decoration: underline !important;
+  color: #23527c;
 }
 .view-display-id-oshnews_list article .field-name-body .more-link {
   color: #10b2e4;
+  text-decoration: none !important;
   text-align: left;
+}
+.view-display-id-oshnews_list article .field-name-body .more-link:hover {
+  color: #10b2e4;
+  text-decoration: underline !important;
 }
 /*News detail
 *****************************************************/
@@ -8233,12 +8250,18 @@ a.more-link:before {
 .node-news .field-name-body a {
   color: #786586;
   font-style: italic;
+  text-decoration: underline !important;
 }
 .node-news .field-name-body a:hover {
-  text-decoration: underline !important;
+  color: #23527c;
 }
 .node-news .field-name-body .more-link {
   color: #10b2e4;
+  text-decoration: none !important;
+}
+.node-news .field-name-body .more-link:hover {
+  color: #10b2e4;
+  text-decoration: underline !important;
 }
 .node-news .field-name-field-image {
   display: inline-block;
@@ -9606,7 +9629,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     position: absolute;
     bottom: 0px;
     right: 0px;
-    margin-right: 15px;
+    margin-right: 14px;
     width: inherit;
     top: 46px;
   }
