--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6606,9 +6606,9 @@ button.close {
   display: none;
 }
 .top-header .header-blocks #block-menu-block-5 {
-  width: 95px;
+  width: 90px;
   position: absolute;
-  top: 41px;
+  top: 34px;
   z-index: 3;
 }
 .top-header .header-blocks #block-menu-block-5 .introduction-image {
@@ -6640,7 +6640,7 @@ button.close {
   margin-top: 7px;
   margin-bottom: 7px;
   clear: both;
-  display: inline-block;
+  display: block;
 }
 .top-header .header-blocks #block-search-form .ui-theme-basic-green.ui-autocomplete-input {
   background-position: 99% 7px;
@@ -6675,6 +6675,8 @@ button.close {
 }
 .top-header .header-blocks #block-menu-block-3 {
   display: inline-block;
+  margin-right: 10px;
+  max-width: 100px;
 }
 .top-header .header-blocks #block-menu-block-3 .introduction-title a {
   display: block;
@@ -7167,6 +7169,26 @@ a.more-link:before {
 }
 #block-system-main .panels-flexible-region-new-slider .view-id-slideshow .owl-wrapper .views-field-field-image {
   position: relative;
+  display: inline-block;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.7)), color-stop(100%, rgba(0, 0, 0, 0)));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000', endColorstr='#00000000', GradientType=0);
+  /* IE6-9 */
+}
+#block-system-main .panels-flexible-region-new-slider .view-id-slideshow .owl-wrapper .views-field-field-image a img {
+  position: relative;
+  z-index: -1;
+  display: block;
 }
 #block-system-main .panels-flexible-region-new-slider .view-id-slideshow .owl-wrapper .views-field-title-field {
   position: absolute;
@@ -7425,6 +7447,29 @@ a.more-link:before {
 /*END HOME*/
 /*ESTILOS ARTICLES
 ****************************************************************/
+.node-type-article .panels-flexible-region-new-cover_image .field-type-image {
+  position: relative;
+  display: inline-block;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.7)), color-stop(140%, rgba(0, 0, 0, 0)));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000', endColorstr='#00000000', GradientType=0);
+  /* IE6-9 */
+}
+.node-type-article .panels-flexible-region-new-cover_image .field-type-image img {
+  position: relative;
+  z-index: -1;
+  display: block;
+}
 .node-type-article h1 {
   color: #58585a;
 }
@@ -7661,8 +7706,32 @@ a.more-link:before {
 .page-what-is-new .panels-flexible-region-new-image {
   position: relative;
 }
+.page-what-is-new .panels-flexible-region-new-image .field-type-image {
+  position: relative;
+  display: inline-block;
+  background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0.7)), color-stop(140%, rgba(0, 0, 0, 0)));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 140%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a6000000', endColorstr='#00000000', GradientType=0);
+  /* IE6-9 */
+}
+.page-what-is-new .panels-flexible-region-new-image .field-type-image img {
+  position: relative;
+  z-index: -1;
+  display: block;
+}
 .page-what-is-new .panels-flexible-region-new-image .pane-node-title-field {
   margin-top: -93px;
+  position: relative;
 }
 .page-what-is-new .panels-flexible-region-new-image .pane-node-title-field h1 {
   color: #ffffff;
@@ -9644,6 +9713,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     top: 0;
     margin-top: 0px;
     margin-right: 15px;
+    right: 0;
   }
   .top-header .region-header-block #block-search-form input {
     display: none;
@@ -9660,6 +9730,7 @@ div[id^="mini-panel-partner_in_country"] .partner-text2-container .field-type-ta
     clear: both;
     margin-bottom: 15px;
     margin-right: 40px;
+    max-width: 117px;
   }
   .top-header .region-header-block #block-lang-dropdown-language {
     margin-right: 40px;
