--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -54,6 +54,7 @@
     		top: 0;
     		margin-top: 0px;
     		margin-right: 15px;
+    		right: 0;
     		input{
     			display: none;
     			height: 29px !important;
@@ -70,6 +71,7 @@
     		clear: both;
     		margin-bottom: 15px;
     		margin-right: 40px;
+    		max-width: 117px;
 		}
 		#block-lang-dropdown-language{
 			margin-right: 40px;
